[gd_scene load_steps=11 format=2]

[ext_resource path="res://ExtraTheatre/HowToStart.gd" type="Script" id=1]
[ext_resource path="res://HUH5.png" type="Texture" id=2]
[ext_resource path="res://HUH1.png" type="Texture" id=3]
[ext_resource path="res://Write.exe/SEGOEUI.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://HUH6.png" type="Texture" id=5]

[sub_resource type="InputEventAction" id=3]
action = "ui_accept"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="InputEventAction" id=5]
action = "ui_cancel"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 5 )

[node name="HowToStart" type="Node2D"]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 224.0
margin_top = 160.0
margin_right = 448.0
margin_bottom = 224.0
shortcut = SubResource( 4 )
text = "Start Game"
icon = ExtResource( 3 )

[node name="Button2" type="Button" parent="."]
margin_left = 224.0
margin_top = 288.0
margin_right = 448.0
margin_bottom = 352.0
text = "How To Play"
icon = ExtResource( 2 )

[node name="Button4" type="Button" parent="."]
margin_left = 224.0
margin_top = 416.0
margin_right = 448.0
margin_bottom = 480.0
text = "Versus Mode (New)"
icon = ExtResource( 5 )

[node name="Button5" type="Button" parent="."]
visible = false
margin_left = 32.0
margin_top = 480.0
margin_right = 256.0
margin_bottom = 544.0
text = "Versus Mode (New, Beta)"
icon = ExtResource( 5 )

[node name="Button8" type="Button" parent="."]
visible = false
margin_left = 224.0
margin_top = 544.0
margin_right = 448.0
margin_bottom = 608.0
toggle_mode = true
text = "Versus Mode (New, Beta)"
icon = ExtResource( 5 )

[node name="Button6" type="Button" parent="."]
visible = false
margin_left = 256.0
margin_top = 480.0
margin_right = 480.0
margin_bottom = 544.0
text = "Versus Mode (New, Beta)"
icon = ExtResource( 5 )

[node name="Button7" type="Button" parent="."]
visible = false
margin_left = 480.0
margin_top = 480.0
margin_right = 704.0
margin_bottom = 544.0
text = "Versus Mode (New, Beta)"
icon = ExtResource( 5 )

[node name="Label1" type="Label" parent="."]
margin_left = 184.0
margin_top = 64.0
margin_right = 479.0
margin_bottom = 108.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Choose How to Start"

[node name="Label2" type="Label" parent="."]
margin_top = 608.0
margin_right = 710.0
margin_bottom = 699.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "PROTIP: If you Didn't Press any Key While Playing, 
You're Going To Sleep"

[node name="Label3" type="Label" parent="."]
visible = false
margin_top = 608.0
margin_right = 717.0
margin_bottom = 699.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "PROTIP: Collide With a Wall And Jump, You'll Jump
Higher Than Usual"

[node name="Label4" type="Label" parent="."]
visible = false
margin_top = 608.0
margin_right = 440.0
margin_bottom = 652.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "PROTIP: This is The Protip Help"

[node name="Label5" type="Label" parent="."]
visible = false
margin_top = 608.0
margin_right = 675.0
margin_bottom = 699.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "PROTIP: Join The ZO Games Discord Server, The
Link is in: https://zakariae.infinityfreeapp.com/"

[node name="Label6" type="Label" parent="."]
visible = false
margin_top = 608.0
margin_right = 708.0
margin_bottom = 699.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "PROTIP: in Versus Mode, If any Player Dies, the 
Other Player will Get The Camera"

[node name="Button3" type="Button" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 96.0
margin_bottom = 64.0
shortcut = SubResource( 2 )
text = "Back"

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="Button4" to="." method="_on_Button4_button_down"]
[connection signal="pressed" from="Button5" to="." method="_on_Button5_pressed"]
[connection signal="toggled" from="Button8" to="." method="_on_Button8_toggled"]
[connection signal="pressed" from="Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Button7" to="." method="_on_Button7_pressed"]
[connection signal="button_down" from="Button3" to="." method="_on_Button3_button_down"]
